# news2tg

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  docker-compose.yml  dockerfile  output.txt  todo.md
.github/workflows/: docker-image.yml
grpc_proto/: python_digest.proto
proto/: service.proto
src/: config.rs  grpc.rs  hackernews.rs  html.rs  lib.rs  llm.rs  main.rs  models.rs  telegram_client.rs  tgclient.rs  tools.rs  v2ex_client.rs
src/common/: config.rs  mod.rs  models.rs  tools.rs
src/grpc/: digest.rs  mod.rs
src/implementations/: ai_helper_deepseek.rs  mod.rs  monitor_hackernews.rs  monitor_v2ex.rs  notify_tg.rs
src/proto-gen/: myservice.rs
src/traits/: ai_helper.rs  mod.rs  monitor.rs  news2tg.rs  notify.rs
tests/: test_grpc.rs  test_html.rs
